--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.2.4",
+    "@react-navigation/bottom-tabs": "^6.0.0-next.12",
     "@react-navigation/native": "^6.0.0-next.9",
     "@react-navigation/stack": "^6.0.0-next.19",
     "react": "17.0.1",
