Adds import of lodash

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.0.0-next.9",
     "@react-navigation/stack": "^6.0.0-next.19",
     "date-fns": "^2.21.3",
+    "lodash": "^4.17.21",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-gesture-handler": "^1.10.3",
@@ -30,6 +31,7 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.170",
     "@types/react": "^17.0.6",
     "@types/react-native": "^0.64.6",
     "@types/react-test-renderer": "^17.0.1",
