--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^0.14.3",
     "victory-native": "^35.3.3"
