--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/lodash": "^4.14.170",
     "@types/react": "^17.0.6",
     "@types/react-native": "^0.64.6",
+    "@types/react-navigation": "^3.4.0",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
